--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,9 @@ h2 {
 div {
 	padding: 0 20% 0 20%;
 }
+p {
+	text-align: justify;
+}
 a.normal_link {
 	color: var(--lk-color);
 	text-decoration: none;
