--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,12 @@ body {
 	}
 h1 {
 	color: var(--h1-color);
-	text-align: center;
 	}
 h2 {
 	color: var(--h2-color);
+	}
+h1, h2, h3, h4, h5, h6 {
+	text-algin: center;
 	}
 div {
 	padding: 0 20% 0 20%;
