--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h2 {
 	color: var(--h2-color);
 	}
 h1, h2, h3, h4, h5, h6 {
-	text-algin: center;
+	text-align: center;
 	}
 div {
 	padding: 0 20% 0 20%;
